# dalang

./: Cargo.toml  README.md
auth/: Cargo.toml  README.md
auth/src/: main.rs  models.rs
dalang-protocol/: Cargo.toml
dalang-protocol/src/: error.rs  lib.rs  tests.rs
frontend/: .prettierrc.json  README.md  index.html  package-lock.json  package.json
frontend-auth/: Cargo.toml  README.md
frontend-auth/src/: app.rs  lib.rs  main.rs
frontend-auth/style/: main.scss
frontend-editor/: Cargo.toml
frontend-home/: Cargo.toml
frontend-hub/: Cargo.toml
frontend/src/: App.vue  main.js  main.rs
frontend/src/assets/: style.css
frontend/src/router/: index.js
frontend/src/services/connection/: ServerConnection.js  opcodes.js
frontend/src/views/: AuthView.vue  HomeView.vue
frontend/styles/: parent.scss
proto/: auth.proto
protocol-derive/: Cargo.toml
protocol-derive/src/: lib.rs
protocol-derive/tests/: custom_decode.rs  simple.rs
renderer-motion-graphics/: Cargo.toml
server/: Cargo.toml
server/src/dalang_server/: components.rs  lib.rs  session.rs  storage.rs
server/src/dalang_server/auth/: mod.rs  sqlite.rs
server/src/dalang_server/protocol/: error.rs  mod.rs  tests.rs
specs/: communication.md  index.md  opcodes.md  protocol.md
ws-motion-graphics/: Cargo.toml
ws-video-editor/: .gitignore  Cargo.toml
