[package]
name = "dalang"
description = "A web-based server-based video editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "dalang_server"
path = "src/dalang_server/lib.rs"

[[bin]]
name = "dalang"
test = false
doc = false

[dev-dependencies]
actix-rt = "^2.8"

[dependencies]
clap = { version = "4", features = ["cargo"] }

pwhash = "1"
rand = "^0.8.5"

actix-web = "4"
actix-web-actors = "4"
actix-files = "^0.6.2"
actix = "^0.13.0"

r2d2 = "^0.8.10"
r2d2_sqlite = { version = "^0.21.0", features = ["bundled"] }

dalang-protocol = { path = "../dalang-protocol" }